Move toggle to top and fix alignment

--- a/src/Device/DeviceSelector/DeviceList/device-list.scss
+++ b/src/Device/DeviceSelector/DeviceList/device-list.scss
@@ -48,8 +48,7 @@
      background-color: $gray-200;
      color: $gray-700;
      text-transform: uppercase;
-     padding: 8px 24px;
-     margin-top: auto;
+     padding: 8px 27px;
  
      .toggle-label {
          font-size: 10px;
